--- a/main.html
+++ b/main.html
@@ -8,7 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>GOA</h1>
+	<br>
+	<p>Goa, state of India, comprising a mainland district on the country’s southwestern coast and an offshore island. It is located about 250 miles (400 km) south of Mumbai (Bombay). One of India’s smallest states, it is bounded by the states of Maharashtra on the north and Karnataka on the east and south and by the Arabian Sea on the west.
+			<ol> <b>Go on a River Cruise
+		Indulge in Water Sports in Goa
+		Play Some Games at the Casino
+	    Learn Scuba Diving in Goa
+		Experience Bar Hopping in Goa</b>
+	</ol>
+	<ul>
+		<b>Goan Fish Curry
+		Chicken Cafreal
+		Goan Pork Vindaloo
+		Chicken Xacuti</b>
+	</ul>	
+	</p>
+	
     <script type="text/javascript" src="./script.js">
+		
 </script>
 
 </body>
