--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	<br>
 	<p>Goa, state of India, comprising a mainland district on the country’s southwestern coast and an offshore island. It is located about 250 miles (400 km) south of Mumbai (Bombay). One of India’s smallest states, it is bounded by the states of Maharashtra on the north and Karnataka on the east and south and by the Arabian Sea on the west.
 			<ol>
-                 <b><li>Go on a River Cruise</li>
+                <i> <b><li>Go on a River Cruise</li>
 		<li>Indulge in Water Sports in Goa</li>
 		<li>Play Some Games at the Casino</li>
 	    <li>Learn Scuba Diving in Goa</li>
@@ -23,7 +23,7 @@
 		<li>Chicken Cafreal</li>
 		<li>Goan Pork Vindaloo</li>
 		<li>Chicken Xacuti</li>
-    </b>
+    </b></i>
 	</ul>		
 	</p>
 	
